--- a/ProjektniZadatak/ProjektniZadatak/ProjektniZadatak.vcxproj.filters
+++ b/ProjektniZadatak/ProjektniZadatak/ProjektniZadatak.vcxproj.filters
@@ -18,9 +18,24 @@
     <ClCompile Include="Test.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="GradskaMreza.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Stajaliste.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Linija.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Stajaliste.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Linija.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="GradskaMreza.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
