--- a/ProjektniZadatak/ProjektniZadatak/ProjektniZadatak.vcxproj
+++ b/ProjektniZadatak/ProjektniZadatak/ProjektniZadatak.vcxproj
@@ -140,12 +140,14 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="GradskaMreza.cpp" />
+    <ClCompile Include="Graf.cpp" />
     <ClCompile Include="Linija.cpp" />
     <ClCompile Include="Stajaliste.cpp" />
     <ClCompile Include="Test.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="GradskaMreza.h" />
+    <ClInclude Include="Graf.h" />
     <ClInclude Include="Linija.h" />
     <ClInclude Include="Stajaliste.h" />
   </ItemGroup>
