--- a/ProjektniZadatak/ProjektniZadatak/ProjektniZadatak.vcxproj
+++ b/ProjektniZadatak/ProjektniZadatak/ProjektniZadatak.vcxproj
@@ -149,6 +149,7 @@
   <ItemGroup>
     <ClInclude Include="GradskaMreza.h" />
     <ClInclude Include="Graf.h" />
+    <ClInclude Include="Izuzeci.h" />
     <ClInclude Include="InteraktivniSistem.h" />
     <ClInclude Include="Linija.h" />
     <ClInclude Include="Stajaliste.h" />
