--- a/ProjektniZadatak/ProjektniZadatak/ProjektniZadatak.vcxproj.filters
+++ b/ProjektniZadatak/ProjektniZadatak/ProjektniZadatak.vcxproj.filters
@@ -50,5 +50,8 @@
     <ClInclude Include="InteraktivniSistem.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Izuzeci.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
